--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     
     /* Colores de acento */
     --accent-magenta: #15dffa;  
-    --accent-pink-soft: #30eee4;
+    --accent-pink-soft: #b0edf3;
     --accent-purple: #9333EA;   
     --accent-purple-soft: #E9D5FF; 
     
